--- a/templates/bithumb/about_us.html
+++ b/templates/bithumb/about_us.html
@@ -6,11 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bithumb</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -21,77 +23,44 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Scoreboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Item Shop</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Forum</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <div class="btn-group">
-                    <a class="nav-link dropdown-toggle" style="cursor:pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Signup
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right p-3">
-                        <div class="my-3">
-                            <h3>Sign Up</h3>
-                        </div>
-                        <form action="" style="width: 300px;">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-dark float-right">Sign Up</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link dropdown-toggle" style="cursor:pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Login
-                </a>
-                <div class="dropdown-menu dropdown-menu-right p-3">
-                    <div class="my-3">
-                        <h3>Login</h3>
-                    </div>
-                    <form action="" style="width: 300px;">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-dark float-right">Login</button>
-                        </div>
-                    </form>
-                </div>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
+                </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+            {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account:myprofile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account:logout' %}">Log out</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
-<div class="container">.
+<div class="container">
     <div class="row">
         <div class="body col-lg-12 mt-4 py-4">
             <h1>About Us</h1>
+            <h3>TODO????</h3>
             <p>Cryptocurrency is a digital asset that is starting to gain popularity in the public.
             However, there are many that do not understand the complexities of these non-traditional currencies.
             Concepts such as decentralization, generation, and (the most appealing) investing can be confusing and too technical
